Issue #SH-290 Batch cards are not aligned properly in Created by section in workspace

--- a/src/app/client/src/app/modules/shared/components/batch-card/batch-card.component.scss
+++ b/src/app/client/src/app/modules/shared/components/batch-card/batch-card.component.scss
@@ -57,6 +57,7 @@
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    padding-right: 0.5rem;
 }
 .w-162 {
     width: calculateRem(162px);
